# flymyai-python

./: .gitignore  LICENSE  README.md  model.py  openapi.json  person.json  pyproject.toml  pyproject.toml.template  requirements.txt  setup.py  setup.py.template
.github/workflows/: tag.yaml  test.yaml
flymyai/: __init__.py
flymyai/agent/: __init__.py  sandbox.py
flymyai/agents/: __init__.py  _client.py  _resources.py  _types.py
flymyai/cli/: make_models.py
flymyai/core/: _client.py  _response.py  _response_factory.py  _streaming.py  authorizations.py  client.py  exceptions.py  models.py
flymyai/core/clients/: AsyncClient.py  SyncClient.py  base_client.py  base_m1_client.py  m1AsyncClient.py  m1Client.py
flymyai/core/models/: base.py  error_responses.py  m1_history.py  successful_responses.py
flymyai/core/response_factory/: async_task_result_factory.py  base_response_factory.py  plain_inference_response_factory.py
flymyai/core/stream_iterators/: AsyncPredictionStream.py  PredictionStream.py  exceptions.py
flymyai/core/types/: event_types.py  m1.py
flymyai/multipart/: binary_field.py  payload.py  simple_field.py
flymyai/schema_obtainers/: file_schema_loader.py
flymyai/utils/: utils.py
flymyai_client/: pyproject.toml
flymyai_client/src/flymyai_client/: __init__.py
flymyai_client_lib/: pyproject.toml  setup.py
flymyai_client_lib/flymyai/: __init__.py
flymyai_client_lib/flymyai/api_field/: base_field.py  binary_field.py  payload.py  simple_field.py
flymyai_client_lib/flymyai/cli/: models_from_file.py
flymyai_client_lib/flymyai/conf/: configs.py
flymyai_client_lib/flymyai/core/: _client.py  client.py  exceptions.py
flymyai_client_lib/flymyai/generators/: base_openapi_generator.py
flymyai_client_lib/flymyai/model_maker/: base_model_maker.py  file_model_maker.py
flymyai_client_lib/flymyai/multipart/: __init__.py
flymyai_client_lib/flymyai/schema_obtainers/: base_schema_loader.py
flymyai_client_lib/flymyai/utils/: utils.py
flymyai_client_lib/tests/: test_flymyai_client.py  test_multipart.py
tests/: FixtureFactory.py  test_agent_client.py  test_agents_variables.py  test_async_inference.py  test_fields.py  test_flymyai_client.py  test_flymyai_m1_client.py  test_multipart.py  test_stream.py  test_unknown_error_handle.py
tests/fixtures/: test_async_inference.json  test_fields.json  test_flymyai_client.json  test_flymyai_m1_client.json  test_stream.json
(+14 files in other folders)
