[tool.poetry]
name = "flymyai-client"
version = "0.1.0"
description = ""
authors = ["D1-3105 <lyerhd@gmail.com>"]
readme = "README.md"
packages = [{include = "flymyai"}]

[tool.poetry.dependencies]
python = "^3.10"
datamodel-code-generator = "^0.25.1"
httpx = "^0.25.2"
websockets = "^12.0"

[tool.poetry.dev-dependencies]
python = "^3.10"
datamodel-code-generator = "^0.25.1"
httpx = "^0.25.2"
websockets = "^12.0"
pytest = "^6.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest]
packages = [{include = ["flymyai", "tests"]}]

[tool.pytest.ini_options]
minversion = 6.0
testpaths = ["./tests"]
pythonpath = 'flymyai'