[tool.poetry]
name = "flymyai-client"
version = "0.1.0"
description = ""
authors = ["D1-3105 <lyerhd@gmail.com>"]
readme = "README.md"
packages = [{include = "flymyai"}]

[tool.poetry.dependencies]
python = "^3.10"
httpx = {extras = ["http2"], version = ">=0.26.0,<0.27.0"}
pydantic = "^2.5.2"
typing-extensions = "^4.9.0"

[tool.poetry.dev-dependencies]
python = "^3.10"
httpx = "^0.26.0"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest]
packages = [{include = ["flymyai", "tests"]}]

[tool.pytest.ini_options]
minversion = 6.0
testpaths = ["./tests"]
pythonpath = 'flymyai'