[tool.poetry]
name = "flymyai-client"
version = "0.1.0"
description = ""
authors = ["D1akaDivan <d1akadivan@amber.iss>"]
readme = "README.md"
packages = [{include = "flymyai"}]

[tool.poetry.dependencies]
python = "^3.10"
datamodel-code-generator = "^0.25.1"
httpx = "^0.25.2"
websockets = "^12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
